<resources>
    <string name="app_name">Cape Town Rocks</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_rock_list">Rock List</string>
    <string name="title_activity_place_list">PlaceList</string>
    <string name="title_activity_maps">Map</string>
    <string name="tour_map_tooltip">Drag map to scroll</string>
    <string name="list_tooltip">Swipe up//down to scroll\n\nClick the names to go to the specific page</string>
    <string name="about_info">"This is the companion app for the 35th IGC's Building Stones of Cape Town tour, based on the book <i> The Building Stones </i> of Cape Town by Doug Cole. \n\nThe purpose of the walking tour is to examine the building stones in selected buildings, monuments
    and statues in central Cape Town. The building stones comprise sedimentary, igneous and
    metamorphic rocks and the mineralogy, texture and, in some sedimentary rocks, the sedimentary
    structure will be seen.\n\n Images provided by Rob Leyland. \n\n "</string>
    <string name="loc_rocks_label">Stones found at this location:</string>
    <string name="title_activity_loc_1">Bartolomeu Dias Statue</string>
    <string name="loc_1_coords">-33.917428, 18.428098 \n\n Roundabout at the intersection of the Heerengracht and Walter Sisulu Avenue.</string>
    <string name="loc_1_desc"> The statue was a gift from the Portuguese government to South
Africa on the occasion of the tercentenary celebrations of the landing of Jan van Riebeeck, but was
only unveiled in 1960 near the South African National Gallery and moved to the present site in about
1984. The statue is bronze and about 2.5 metres high, the sculptor being Professor Barata Feyo. It rests on a pedestal and a flat plinth of very light grey, coarse-grained, porphyritic granite of
the Cape Granite Suite. The pedestal was designed by the architect, Fernandes de Sá. The stone has a
sawn finish and contains lath-like orthoclase phenocrysts, up to 80 mm long. Grey to dark grey
xenoliths, a few of which have been partially assimilated by the granite, are also noticeable and
attain 100 mm in length. The porphyritic granite was possibly obtained from Mamre Quarry, near
Atlantis, since local quarries in the region of Kloof Nek, including the Higgo Quarry, had
already been closed for a considerable period by the time that this memorial was built.
\n\n
We cross the road on the southern side of the roundabout and briefly stop at a plaque
commemorating Bartolomeu Dias, which is mounted on a pedestal and base of the medium-grained
“Paarl Grey” granite, more extensive examples of which will be seen later on the tour. We proceed
southwest along the “island” between the two roads of the Heerengracht and pass numerous
blocks of sandstone with a sawn flat top for persons to sit. The sandstone is fine-grained, beige in
colour and cross-bedded in places. It is known commercially as “Golden Dawn” and is quarried from
Mookgopong (formerly Naboomspruit) in Limpopo Province. It is fluvial in origin and is from the Early
Jurassic Clarens Formation, Karoo Supergroup. At the southern end of the “island”, we cross the
exit road to Hertzog Boulevard and arrive at the War Memorial.</string>
    <string name="title_activity_loc_2">War Memorial</string>
    <string name="loc_2_coords">-33.918601, 18.426860 \n\n Traffic island in the middle of the Heerengracht</string>
    <string name="loc_2_desc">The War Memorial commemorates the 1st and 2nd World Wars and the Korean War. It consists of three bronze sculptures, which rest on
pedestals and plinths of beige-coloured, quartzitic sandstone of the Table Mountain Group, and four
bronze bas-reliefs (low relief panels) on the lower part of the pedestal. The sculptor was Vernon
March and the memorial was originally unveiled in 1924. The high central sculpture shows an
angel treading on a serpent that is wrapped around a globe, which represents the Earth. The lower
sculptures east and west of this central sculpture depict respectively, a South African soldier in East
Africa and a South African soldier in Flanders during World War I. The four bas-reliefs depict various
scenes from World War I. The memorial was originally erected at the bottom of Adderley Street close
to the original coastline and moved by eight metres when Adderley Street was widened in
1959, fourteen years after reclamation of the Foreshore. In 2013, it was moved again by
three hundred metres to its present position to make way for a new feeder station for the MyCiTi
bus rapid transit system.
        \n\n
The quartzitic sandstone is hammer-dressed and was probably exploited from loose boulders near
Kloof Nek (Bishop and Williams Quarry) and/or from quarries near Lakeside and Glencairn.It is fine- to coarse-grained, massive but cross-bedded in places, and contains scattered, white,
rounded, quartz pebbles and greenish-grey mudstone clasts. The pedestals and plinths surmount a
stepped podium constructed of light grey, medium-grained granite (Paarl Grey), which was taken
from quarries west of Paarl. The granite has a sawn finish and contains light grey to white, lathlike,
feldspar crystals, grey, glassy quartz crystals and black, flaky biotite crystals. Brown stains are
locally present, due to oxidation of fine-grained, cubic pyrite crystals.</string>
    <string name="title_activity_loc_3">Van Riebeeck Statues</string>
    <string name="loc_3_coords">-33.919460, 18.425995</string>
    <string name="loc_3_desc">The statues are of Jan van Riebeeck and Maria de
la Quellerie. Both statues are bronze, about
three metres high and rest on pedestals and
plinths of quartzitic sandstone of the Table
Mountain Group supported on two-stepped
podiums of granite. The Jan van Riebeeck
statue was completed in 1899 and was
commissioned by Cecil John Rhodes as a
personal gift to the citizens of Cape Town, the
sculptor being John Tweed. It was placed at
the end of Adderley Street close to the original
shoreline near to the site where Van Riebeeck
was thought to have landed in 1652. The
Maria de la Quellerie statue was commissioned
by the Nederlandse van Riebeeck Comitee de
Heren Zeventien in 1952, the sculptor being Dirk
Wolbers, and was given by the people of the
Netherlands to South Africa in commemoration
of the tercentenary of Jan van Riebeeck’s arrival. It was originally placed near the Jan van
Riebeeck statue at the end of Adderley Street,
but both statues were moved to their present
site on the Foreshore in 1968.
        \n\n
    The quartzitic sandstone at the Jan van Riebeeck statue is buff to beige in colour, fine- to coarsegrained,
massive and, in places, stained orange or brown, as a result of the precipitation of ironbearing
minerals such as limonite. Scattered white, rounded, quartz pebbles, greenish-grey and dark
greenish-grey mudstone clasts and cross-bedding are present in some sandstone blocks. A pebble
bed can be seen in one block of the Jan van Riebeeck pedestal. These parameters are evidence of
deposition within an ancient river during the Ordovician Period, some 470 million years ago. The
quartzitic sandstone in the pedestals and plinths of the Maria de la Quellerie statue shows
similar properties. The two-stepped podiums at the foot of the plinths are constructed of different
local granites, i.e. light grey to very light grey, coarse-grained, porphyritic granite at the Jan van
    \n\n
Riebeeck statue and grey to light grey, medium-grained granite (Paarl Grey) at the Maria de la
Quellerie statue. This is almost certainly due to the different ages of the statues. For the Jan van
Riebeeck statue in 1899, coarse-grained, porphyritic granite was readily available from the Higgo
Quarry near Kloof Nek , but by 1952 when the Maria de la Quellerie statue was constructed,
all the granite quarries in the vicinity of Cape Town had been closed and the only accessible, local
Cape Granite was Paarl Grey from quarries west of Paarl. The quartzitic sandstone at the Jan van
Riebeeck statue could have been derived from loose boulders near Kloof Nek at a site named Bishop
and Williams Quarry and/or from quarries near Fish Hoek and Glencairn , while in
1952, this rock could still be obtained from Glencairn Quarry, which only closed in 1978.</string>
    <string name="title_activity_loc_4">Number 1 Adderley Street</string>
    <string name="loc_4_coords">-33.920366, 18.426443</string>
    <string name="title_activity_loc_6">Anglo-Boer War Memorial</string>
    <string name="loc_9_coords">-33.924018, 18.422051 \n\n 8 Darling St </string>
    <string name="loc_9_desc">This building lies adjacent to the South African Mutual Life Assurance Society building on the
opposite side of Parliament Street. It was previously named the “Permanent Buildings”. This
seven storey building with an inset columned portico on the fifth floor was designed by the architect
Stucke and completed in 1898. “Paarl Grey” granite is present throughout the building, in the
form of an ashlar facing with a sawn finish, and basework blocks in a rustic finish. The granite also
forms the window surrounds, cornices and inset columned portico. Decorative ornamentation in the
Fine Art Nouveau style has been sculptured on some blocks. The light grey, medium-grained
granite is slightly porphyritic with white, very light grey, light grey and beige feldspar laths, up to 15
mm long, set in a groundmass of grey to light grey, glassy quartz, white to grey feldspar and flaky
crystals of black biotite. Rare grey to dark grey, speckled xenoliths, up to 150 mm long, can be
observed in the granite and some slabs exhibit light brownish-yellow stains, probably as a result of
stone cleaning. Drill holes for originally extracting the granite blocks can be seen in Parliament
Street.</string>
    <string name="title_activity_loc_15">Temple Chambers</string>
    <string name="title_activity_loc_18">Mandela-Rhodes Building</string>
    <string name="title_activity_loc_20">Bishop Gray Monument</string>
    <string name="title_activity_loc_26">Nedbank </string>
    <string name="title_activity_loc_28">Market House</string>
    <string name="title_activity_loc_30">Waldorf Arcade</string>
    <string name="title_activity_loc_33">Woolworths Building</string>
    <string name="title_activity_loc_34">Fountain In St. George\'s Mall</string>
    <string name="rock_locs_label">Locations that this stone is found at:</string>
    <string name="title_activity_rock_1">Paarl Grey granite</string>
    <string name="title_activity_rock_2">Quartzitic Sandstone</string>
    <string name="title_activity_rock_4">Porphyritic granite of the Cape Granite Suite</string>
    <string name="title_activity_rock_5">Rustenburg Grey black gabbro</string>
    <string name="title_activity_rock_6">Parys granite</string>
    <string name="title_activity_rock_8">Golden Dawn sandstone</string>
</resources>