<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.asterodia.navtest.rock_2"
    tools:showIn="@layout/activity_rock_2">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:id="@+id/rock_name"
                android:text="@string/title_activity_rock_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rock_locs_list_label"
                android:text="@string/rock_locs_label"
                android:layout_marginTop="20px"
                android:layout_below="@id/rock_name"
                android:textStyle="bold"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15px"
                android:layout_marginBottom="15px"
                android:layout_below="@id/rock_locs_list_label"
                android:id="@+id/loc_1"
                android:text="@string/title_activity_loc_1"
                android:clickable="true"
                android:onClick="onClick_loc_1"
                android:textColor="@color/colorPrimary"
                />
            <View
                android:layout_width="fill_parent"
                android:layout_below="@id/loc_1"
                android:layout_height="1dp"
                android:background="@color/common_action_bar_splitter"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15px"
                android:layout_marginBottom="15px"
                android:layout_below="@id/loc_1"
                android:id="@+id/loc_6"
                android:text="@string/title_activity_loc_6"
                android:clickable="true"
                android:onClick="onClick_loc_6"
                android:textColor="@color/colorPrimary" />
            <View
                android:layout_width="fill_parent"
                android:layout_below="@id/loc_6"
                android:layout_height="1dp"
                android:background="@color/common_action_bar_splitter"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15px"
                android:layout_marginBottom="15px"
                android:layout_below="@id/loc_6"
                android:id="@+id/loc_15"
                android:text="@string/title_activity_loc_15"
                android:clickable="true"
                android:onClick="onClick_loc_15"
                android:textColor="@color/colorPrimary"
                />
            <View
                android:layout_width="fill_parent"
                android:layout_below="@id/loc_15"
                android:layout_height="1dp"
                android:background="@color/common_action_bar_splitter"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15px"
                android:layout_marginBottom="15px"
                android:layout_below="@id/loc_15"
                android:id="@+id/loc_18"
                android:text="@string/title_activity_loc_18"
                android:clickable="true"
                android:onClick="onClick_loc_18"
                android:textColor="@color/colorPrimary"
                />
            <View
                android:layout_width="fill_parent"
                android:layout_below="@id/loc_18"
                android:layout_height="1dp"
                android:background="@color/common_action_bar_splitter"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15px"
                android:layout_marginBottom="15px"
                android:layout_below="@id/loc_18"
                android:id="@+id/loc_20"
                android:text="@string/title_activity_loc_20"
                android:clickable="true"
                android:onClick="onClick_loc_20"
                android:textColor="@color/colorPrimary"
                />
            <View
                android:layout_width="fill_parent"
                android:layout_below="@id/loc_20"
                android:layout_height="1dp"
                android:background="@color/common_action_bar_splitter"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15px"
                android:layout_marginBottom="15px"
                android:layout_below="@id/loc_20"
                android:id="@+id/loc_26"
                android:text="@string/title_activity_loc_26"
                android:clickable="true"
                android:onClick="onClick_loc_26"
                android:textColor="@color/colorPrimary"
                />
            <View
                android:layout_width="fill_parent"
                android:layout_below="@id/loc_26"
                android:layout_height="1dp"
                android:background="@color/common_action_bar_splitter"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15px"
                android:layout_marginBottom="15px"
                android:layout_below="@id/loc_26"
                android:id="@+id/loc_28"
                android:text="@string/title_activity_loc_28"
                android:clickable="true"
                android:onClick="onClick_loc_28"
                android:textColor="@color/colorPrimary"
                />
            <View
                android:layout_width="fill_parent"
                android:layout_below="@id/loc_28"
                android:layout_height="1dp"
                android:background="@color/common_action_bar_splitter"/>
            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15px"
            android:layout_marginBottom="15px"
            android:layout_below="@id/loc_28"
            android:id="@+id/loc_30"
            android:text="@string/title_activity_loc_30"
            android:clickable="true"
            android:onClick="onClick_loc_30"
            android:textColor="@color/colorPrimary"
            />
            <View
                android:layout_width="fill_parent"
                android:layout_below="@id/loc_30"
                android:layout_height="1dp"
                android:background="@color/common_action_bar_splitter"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15px"
                android:layout_marginBottom="15px"
                android:layout_below="@id/loc_30"
                android:id="@+id/loc_33"
                android:text="@string/title_activity_loc_33"
                android:clickable="true"
                android:onClick="onClick_loc_33"
                android:textColor="@color/colorPrimary"
                />
            <View
                android:layout_width="fill_parent"
                android:layout_below="@id/loc_33"
                android:layout_height="1dp"
                android:background="@color/common_action_bar_splitter"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15px"
                android:layout_marginBottom="15px"
                android:layout_below="@id/loc_33"
                android:id="@+id/loc_34"
                android:text="@string/title_activity_loc_34"
                android:clickable="true"
                android:onClick="onClick_loc_34"
                android:textColor="@color/colorPrimary"
                />
            <View
                android:layout_width="fill_parent"
                android:layout_below="@id/loc_34"
                android:layout_height="1dp"
                android:background="@color/common_action_bar_splitter"/>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
