<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.asterodia.navtest.loc_9"
    tools:showIn="@layout/activity_loc_9">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/loc_image"
                android:src="@drawable/loc_9"
                android:layout_centerHorizontal="true"
                android:layout_margin="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Coordinates/Address:"
                android:id="@+id/coord_text"
                android:layout_below="@+id/loc_image"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:padding="5sp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:textStyle="bold"
                android:textSize="15dp"  />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loc_9_coords"
                android:id="@+id/coord"
                android:layout_below="@+id/coord_text"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:padding="5dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Description:"
                android:id="@+id/desc_label"
                android:layout_marginTop="10dp"
                android:padding="5sp"
                android:layout_below="@+id/coord"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:textStyle="bold"
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/loc_desc"
                android:text="@string/loc_9_desc"
                android:layout_below="@+id/desc_label"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:padding="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/loc_rocks_list_label"
                android:text="@string/loc_rocks_label"
                android:layout_marginTop="20px"
                android:layout_below="@id/loc_desc"
                android:textStyle="bold"
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15px"
                android:layout_marginBottom="15px"
                android:layout_below="@id/loc_rocks_list_label"
                android:id="@+id/rock_1"
                android:text="@string/title_activity_rock_1"
                android:clickable="true"
                android:onClick="onClick_rock_1"
                android:textColor="@color/colorPrimary"
                />
            <View
                android:layout_width="fill_parent"
                android:layout_below="@id/rock_1"
                android:layout_height="1dp"
                android:background="@color/common_action_bar_splitter"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15px"
                android:layout_marginBottom="15px"
                android:layout_below="@id/rock_1"
                android:id="@+id/rock_2"
                android:text="@string/title_activity_rock_2"
                android:textColor="@color/colorPrimary"
                android:clickable="true"
                android:onClick="onClick_rock_2"
                />
            <View
                android:layout_width="fill_parent"
                android:layout_below="@id/rock_2"
                android:layout_height="1dp"
                android:background="@color/common_action_bar_splitter"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15px"
                android:layout_marginBottom="15px"
                android:layout_below="@id/rock_2"
                android:id="@+id/rock_4"
                android:text="@string/title_activity_rock_4"
                android:textColor="@color/colorPrimary"
                android:clickable="true"
                android:onClick="onClick_rock_4"
                />
            <View
                android:layout_width="fill_parent"
                android:layout_below="@id/rock_4"
                android:layout_height="1dp"
                android:background="@color/common_action_bar_splitter"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15px"
                android:layout_marginBottom="15px"
                android:layout_below="@id/rock_4"
                android:id="@+id/rock_5"
                android:text="@string/title_activity_rock_5"
                android:textColor="@color/colorPrimary"
                android:clickable="true"
                android:onClick="onClick_rock_5"
                />
            <View
                android:layout_width="fill_parent"
                android:layout_below="@id/rock_5"
                android:layout_height="1dp"
                android:background="@color/common_action_bar_splitter"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15px"
                android:layout_marginBottom="15px"
                android:layout_below="@id/rock_5"
                android:id="@+id/rock_6"
                android:text="@string/title_activity_rock_6"
                android:textColor="@color/colorPrimary"
                android:clickable="true"
                android:onClick="onClick_rock_6" />
            <View
                android:layout_width="fill_parent"
                android:layout_below="@id/rock_6"
                android:layout_height="1dp"
                android:background="@color/common_action_bar_splitter"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15px"
                android:layout_marginBottom="15px"
                android:layout_below="@id/rock_6"
                android:id="@+id/rock_8"
                android:text="@string/title_activity_rock_8"
                android:textColor="@color/colorPrimary"
                android:clickable="true"
                android:onClick="onClick_rock_8"
                />
            <View
                android:layout_width="fill_parent"
                android:layout_below="@id/rock_8"
                android:layout_height="1dp"
                android:background="@color/common_action_bar_splitter"/>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
